# Auto-generated code for Account
# Generated from domain_model.puml

from typing import List, Any

class Account:
    def __init__(self, account_number: str, balance: float, type: str):
        self.account_number = account_number
        self.balance = balance
        self.type = type

    def deposit(self, amount: float):
        # TODO: Implement business logic for deposit
        pass

    def withdraw(self, amount: float):
        # TODO: Implement business logic for withdraw
        pass

