# Auto-generated code for Customer
# Generated from domain_model.puml

from typing import List, Any

class Customer:
    def __init__(self, customer_id: str, full_name: str, email: str, accounts: list[Account]):
        self.customer_id = customer_id
        self.full_name = full_name
        self.email = email
        self.accounts = accounts

    def register(self):
        # TODO: Implement business logic for register
        pass

    def update_profile(self):
        # TODO: Implement business logic for update_profile
        pass

