# Auto-generated code for NotificationService
# Generated from domain_model.puml

from typing import List, Any

class NotificationService:
    def __init__(self):
        pass

    def send_email(self, to: str, subject: str, body: str):
        # TODO: Implement business logic for send_email
        pass

    def send_sms(self, to: str, message: str):
        # TODO: Implement business logic for send_sms
        pass

