# Auto-generated code for TransactionService
# Generated from domain_model.puml

from typing import List, Any

class TransactionService:
    def __init__(self):
        pass

    def process_transfer(self, from_acc: Account, to_acc: Account, amount: float):
        # TODO: Implement business logic for process_transfer
        pass

    def get_history(self, account: Account):
        # TODO: Implement business logic for get_history
        pass

